--- a/package.json
+++ b/package.json
@@ -6,11 +6,14 @@
   "main": "src/index.js",
   "scripts": {
     "start": "nodemon src/index.js",
+    "sentry": "nodemon src/sentry-index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@sentry/node": "^7.102.1",
+    "@sentry/profiling-node": "^7.102.1",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "twilio": "^4.22.0"
