--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@sentry/cli": "^2.28.6",
     "@sentry/node": "^7.102.1",
     "@sentry/profiling-node": "^7.102.1",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
+    "source-map-support": "^0.5.21",
     "twilio": "^4.22.0"
   },
   "devDependencies": {
