--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "",
   "main": "src/index.js",
   "scripts": {
-    "start": "nodemon src/index.js",
+    "start": "nodemon src/sentry-index.js",
     "sentry": "nodemon src/sentry-index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
